# fastapi-simple-bearer

./: README.md  pyproject.toml
.github/workflows/: publish.yml  release.yml  tests.yml
examples/: basic.py  different_scopes.py  multiple_tokens.py
fastapi_simple_bearer/: FSB.py  __init__.py  exceptions.py
tests/: test_basic.py  test_multiple_tokens.py  test_tokens_set.py
