[tool.poetry]
name = "fastapi-simple-bearer"
version = "0.1.2"
description = "The simpliest way to secure your API with preset token"
authors = ["Yan Khachko <a@slnk.icu>"]
readme = "README.md"
packages = [{include = "fastapi_simple_bearer"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"

[tool.poetry.group.dev.dependencies]
uvicorn = "^0.30.6"
black = "^24.8.0"
isort = "^5.13.2"
pytest = "^8.3.3"
httpx = "^0.27.2"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

test.sequence = [
  {cmd = "pytest"}
]
[tool.poetry.urls]
Source = "https://github.com/sijokun/async-fastapi-jwt-auth"
